--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,14 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.10.3",
+            "com.codeborne:selenide:6.18.0",
             "org.junit.jupiter:junit-jupiter:5.9.1",
             "org.slf4j:slf4j-simple:2.0.6"
     )
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 test {
